--- a/ResourceService/src/main/resources/application.properties
+++ b/ResourceService/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8082
+spring.application.name=resource-service
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=update
-song-service.uri=http://song-service:8081/songs
+eureka.client.serviceUrl.defaultZone=${EUREKA_CLIENT_SERVICE_URL:http://localhost:8761/eureka}
