--- a/SongService/src/main/resources/application.properties
+++ b/SongService/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 server.port=8081
+spring.application.name=song-service
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=update
+eureka.client.serviceUrl.defaultZone=${EUREKA_CLIENT_SERVICE_URL:http://localhost:8761/eureka}
